@@ -58,7 +58,7 @@ namespace MySql.Data.MySqlClient.Tests
         public override void FixtureSetup()
         {
             pooling = false;
-            csAdditions = ";procedure cache size=0;logging=true;";
+            csAdditions = ";procedure cache size=0;";
             base.FixtureSetup();
         }
 
@@ -1450,7 +1450,6 @@ namespace MySql.Data.MySqlClient.Tests
         {
             if (version < new Version(5, 0)) return;
 
-            
             execSQL("CREATE PROCEDURE spTest() BEGIN SELECT 1; END");
             execSQL("CREATE PROCEDURE spTest2() BEGIN SELECT 1; END");
             suExecSQL("CREATE USER abc IDENTIFIED BY 'abc'");
@@ -1464,6 +1463,7 @@ namespace MySql.Data.MySqlClient.Tests
                 using (MySqlConnection c = new MySqlConnection(connStr))
                 {
                     c.Open();
+
                     MySqlCommand cmd = new MySqlCommand("spTest", c);
                     cmd.CommandType = CommandType.StoredProcedure;
                     try
@@ -1517,17 +1517,24 @@ namespace MySql.Data.MySqlClient.Tests
             Assert.AreEqual(1, o);
         }
 
-        [Test]
-        public void ParametersInReverseOrder()
+        private void ParametersInReverseOrderInternal(bool isOwner)
         {
             if (Version.Major < 5) return;
 
-            rootConn.ChangeDatabase(database1);
-            suExecSQL(@"CREATE PROCEDURE spTest(IN p_1 VARCHAR(5), IN p_2 VARCHAR(5))
-                        BEGIN SELECT p_1 AS P1, p_2 AS P2; END");
-            rootConn.ChangeDatabase(database0);
+            string sql = @"CREATE PROCEDURE spTest(IN p_1 VARCHAR(5), IN p_2 VARCHAR(5))
+                        BEGIN SELECT p_1 AS P1, p_2 AS P2; END";
+            string spName = "spTest";
+            if (!isOwner)
+            {
+                rootConn.ChangeDatabase(database1);
+                suExecSQL(sql);
+                rootConn.ChangeDatabase(database0);
+                spName = database1 + ".spTest";
+            }
+            else
+                execSQL(sql);
 
-            MySqlCommand cmd = new MySqlCommand(database1 + ".spTest", conn);
+            MySqlCommand cmd = new MySqlCommand(spName, conn);
             cmd.CommandType = CommandType.StoredProcedure;
             cmd.CommandTimeout = 0;
             cmd.Parameters.AddWithValue("?p_2", ("World"));
@@ -1550,6 +1557,18 @@ namespace MySql.Data.MySqlClient.Tests
                 Assert.AreEqual("Hello", dt.Rows[0]["P1"]);
                 Assert.AreEqual("World", dt.Rows[0]["P2"]);
             }
+        }
+
+        [Test]
+        public void ParametersInReverseOrderNotOwner()
+        {
+            ParametersInReverseOrderInternal(false);
+        }
+
+        [Test]
+        public void ParametersInReverseOrderOwner()
+        {
+            ParametersInReverseOrderInternal(true);
         }
     }
 }
